# SpaceApps2025

./: BuildConfig.h.in  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
data/: data_manager.cpp  data_manager.h  dataset_split.h  k2pandc_2025.10.04_21.22.40.csv  kepler.csv  tess.csv
html/: index.html
main/: SpaceApps2025.cpp  SpaceApps2025.h
models/: DNN.cpp  DNN.h  attention.h
web/: web_manager.cpp  web_manager.h
web_manager/: manager.cpp  manager.h
